--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(coleccion_flujo_C-
         ciencia/matematicas/matematicas.h
         ciencia/matematicas/matematicas.cpp
         ciencia/fisica/fisica.cpp
-        ciencia/ciencia.cpp)
+        ciencia/ciencia.cpp
+        main.h)
